kubernetes/apps/flux-system/flux-operator/instance/github/webhooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: external.chestr.dev
spec:
  ingressClassName: external
  rules:
    - host: &host "flux-webhook.chestr.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
